# pyjira

./: .gitignore  README.md  pyproject.toml
pyjira/: __init__.py  app.py  databases.py  exceptions.py  logger_conf.py  models.py  services.py
pyjira/actions/: task.py
tests/: conftest.py
tests/actions/: test_task.py
